# bevy_registration

./: Cargo.toml  README.md
bevy_registration_procedural_macros/: Cargo.toml
bevy_registration_procedural_macros/src/: lib.rs
examples/: basic.rs
examples/everything/: app.rs  far.rs  main.rs
procedural_macros/: Cargo.toml
src/: lib.rs
