[package]
name = "bevy_registration"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Run code on the app from far away."
repository = "https://github.com/coolcatcoder/bevy_registration"
readme = "README.md"
keywords = ["bevy", "inventory", "registration"]
categories = ["game-development"]

[workspace]
members = ["bevy_registration_procedural_macros"]

[dependencies]
bevy_registration_procedural_macros = {path="bevy_registration_procedural_macros", version = "0.2.0"}
bevy = { version = "0.15.1", default-features = false }
inventory = "0.3.17"
paste = "1.0.15"